--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.2.2
+chardet==5.2.0
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.1.1
@@ -17,12 +18,15 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 mysql-connector-python==8.4.0
 orjson==3.10.3
+pillow==10.3.0
 pydantic==2.7.2
 pydantic_core==2.18.3
 Pygments==2.18.0
+PyJWT==2.8.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+reportlab==4.2.0
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
@@ -34,4 +38,3 @@ uvicorn==0.30.0
 uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
-reportlab~=4.2.0
