--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.4.0
 bcrypt==4.1.3
 certifi==2024.2.2
 chardet==5.2.0
+charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.1.1
@@ -28,6 +29,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
 reportlab==4.2.0
+requests==2.32.3
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
@@ -35,6 +37,7 @@ starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.0
 ujson==5.10.0
+urllib3==2.2.2
 uvicorn==0.30.0
 uvloop==0.19.0
 watchfiles==0.22.0
